syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package user_v1;

option go_package = "github.com/alisher-baizhumanov/chat-microservices/protos/generated/user-v1;user_v1";

service UserServiceV1 {
    rpc Create(CreateIn) returns (CreateOut) {}
    rpc Get(GetIn) returns (GetOut) {}
    rpc Update(UpdateIn) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteIn) returns (google.protobuf.Empty) {}
}

enum Role {
  NULL = 0;
  USER = 1;
  ADMIN = 2;
}

message UserRegister {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

message UserUpdate {
    google.protobuf.StringValue name = 1;
    google.protobuf.StringValue email = 2;
    Role role = 3;
}

message UserInfo {
    int64 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateIn {
    UserRegister user_register = 1;
}

message CreateOut {
    int64 id = 1;
}

message GetIn {
    int64 id = 1;
}

message GetOut {
    UserInfo user_info = 1;
}

message UpdateIn {
    int64 id = 1;
    UserUpdate user_update = 2;
}

message DeleteIn {
    int64 id = 1;
}